--- a/index.html
+++ b/index.html
@@ -9,124 +9,93 @@
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
 <style>
-* { box-sizing: border-box; margin: 0; padding: 0; scroll-behavior: smooth; }
+* { box-sizing: border-box; margin:0; padding:0; scroll-behavior:smooth; }
 body {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(180deg, #0d0d0d, #1a001a);
+    background: linear-gradient(180deg, #0a0010, #1a001a);
     color: #e5e5e5;
     overflow-x: hidden;
 }
+a { text-decoration:none; }
 
-a { text-decoration: none; }
-
-/* Header & Name with Seasonal Animation */
-header { text-align: center; padding: 6rem 1.5rem 5rem; position: relative; overflow: hidden; }
-.profile-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-    margin-bottom: 1rem;
-    position: relative;
-}
+/* Header & Name + Verified Badge */
+header { text-align:center; padding:6rem 1.5rem 5rem; position:relative; overflow:hidden; }
+.profile-header { display:flex; justify-content:center; align-items:center; gap:0.5rem; margin-bottom:1rem; position:relative; }
 .profile-header h1 {
-    font-size: 3rem;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    position: relative;
+    font-size:3rem;
+    font-weight:700;
+    display:flex;
+    align-items:center;
+    gap:0.5rem;
+    color:#FF69B4;
 }
-.profile-header h1 span.name { position: relative; display: inline-block; }
-.verified-badge { width: 28px; height: 28px; }
-
-/* Seasonal animation classes */
-.name.summer { color: #FF4500; text-shadow: 0 0 20px #FF4500; animation: burn 2s infinite; }
-@keyframes burn {
-    0%,100%{text-shadow:0 0 10px #FF4500,0 -5px 20px #FFA500; transform:translateY(0);}
-    50%{text-shadow:0 0 25px #FF6347,0 -10px 40px #FF8C00; transform:translateY(-2px);}
-}
-
-.name.winter { color: #00FFFF; text-shadow: 0 0 10px #00FFFF; animation: freeze 3s infinite; }
-@keyframes freeze {
-    0%,100%{text-shadow:0 0 10px #00FFFF,0 -5px 20px #B0E0E6; transform:translateY(0);}
-    50%{text-shadow:0 0 25px #ADD8E6,0 -10px 40px #B0E0E6; transform:translateY(1px);}
-}
-
-.name.autumn { color: #FFA500; animation: leaves 5s infinite; }
-@keyframes leaves {
-    0% {transform:translateY(0);}
-    25% {transform:translateY(5px);}
-    50% {transform:translateY(0);}
-    75% {transform:translateY(3px);}
-    100% {transform:translateY(0);}
-}
+.verified-badge { width:28px; height:28px; }
 
 /* Buttons */
 .btn {
-    display: inline-block;
-    padding: 0.8rem 1.6rem;
-    border-radius: 999px;
-    background: linear-gradient(135deg, #FF69B4, #FF1493);
-    color: #fff;
-    font-weight: 600;
-    margin: 0.5rem;
+    display:inline-block;
+    padding:0.8rem 1.6rem;
+    border-radius:999px;
+    background: linear-gradient(135deg,#FF69B4,#FF1493);
+    color:#fff;
+    font-weight:600;
+    margin:0.5rem;
     transition: transform 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
 }
 .btn:hover {
     transform: translateY(-4px) scale(1.05);
-    box-shadow: 0 12px 30px rgba(255,20,147,0.35);
+    box-shadow:0 12px 30px rgba(255,20,147,0.35);
     filter: brightness(1.2);
 }
 
-nav {
-    position: sticky;
-    top: 0;
-    background: rgba(13,0,13,0.95);
-    backdrop-filter: blur(10px);
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    padding: 1rem;
-    z-index: 100;
-}
-nav a { color: #e5e5e5; font-weight: 500; transition: color 0.3s ease; }
-nav a:hover { color: #FF69B4; }
+/* Nav */
+nav { position:sticky; top:0; background: rgba(13,0,13,0.95); backdrop-filter:blur(10px); display:flex; justify-content:center; gap:2rem; padding:1rem; z-index:100; }
+nav a { color:#e5e5e5; font-weight:500; transition: color 0.3s ease; }
+nav a:hover { color:#FF69B4; }
 
-section { max-width: 1000px; margin: 0 auto; padding: 4rem 1.5rem; }
-h2 { font-size: 2rem; margin-bottom: 2rem; border-left: 4px solid #FF69B4; padding-left: 1rem; }
-.grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 2rem; }
-.card {
-    background: rgba(26,0,26,0.85);
-    padding: 2rem;
-    border-radius: 20px;
-    border: 1px solid #4b004b;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.card:hover { transform: translateY(-6px); box-shadow: 0 20px 40px rgba(255,105,180,0.3); }
+/* Sections */
+section { max-width:1000px; margin:0 auto; padding:4rem 1.5rem; }
+h2 { font-size:2rem; margin-bottom:2rem; border-left:4px solid #FF69B4; padding-left:1rem; }
+.grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:2rem; }
+.card { background: rgba(26,0,26,0.85); padding:2rem; border-radius:20px; border:1px solid #4b004b; transition: transform 0.3s ease, box-shadow 0.3s ease; }
+.card:hover { transform:translateY(-6px); box-shadow:0 20px 40px rgba(255,105,180,0.3); }
 
-/* Nezuko + Particles */
+/* Nezuko + Particle Container */
 .nezuko-container { display:flex; justify-content:center; position:relative; margin-top:3rem; height:350px; }
-#nezuko-animation { width:240px; height:350px; z-index:2; position: relative; }
+#nezuko-animation { width:240px; height:350px; z-index:2; position:relative; }
 #particles-js { position:absolute; width:100%; height:100%; top:0; left:0; pointer-events:none; z-index:1; }
 
+/* Footer & Quote */
 footer { text-align:center; padding:3rem 1rem; background:#0a0010; color:#a3a3a3; }
 .quote { font-style:italic; margin-top:2rem; color:#FFB6C1; text-align:center; }
+
+/* About Me text animations for seasons */
+.name { position:relative; display:inline-block; }
+.name.summer { color:#FF4500; text-shadow:0 0 20px #FF4500; animation: burn 2s infinite; }
+@keyframes burn { 0%,100%{text-shadow:0 0 10px #FF4500,0 -5px 20px #FFA500; transform:translateY(0);} 50%{text-shadow:0 0 25px #FF6347,0 -10px 40px #FF8C00; transform:translateY(-2px);} }
+.name.winter { color:#00FFFF; text-shadow:0 0 10px #00FFFF; animation: freeze 3s infinite; }
+@keyframes freeze { 0%,100%{text-shadow:0 0 10px #00FFFF,0 -5px 20px #B0E0E6; transform:translateY(0);} 50%{text-shadow:0 0 25px #ADD8E6,0 -10px 40px #B0E0E6; transform:translateY(1px);} }
+.name.autumn { color:#FFA500; animation: leaves 5s infinite; }
+@keyframes leaves { 0% {transform:translateY(0);} 25% {transform:translateY(5px);} 50% {transform:translateY(0);} 75% {transform:translateY(3px);} 100% {transform:translateY(0);} }
+
 </style>
 </head>
 <body>
 
 <header>
   <div class="profile-header">
-    <h1><span class="name">Robin Ace Tapang</span> <img class="verified-badge" src="verified-blue-badge.png" alt="Verified"></h1>
+    <h1><span class="name">Robin Ace Tapang</span> <img class="verified-badge" src="verified-blue-badge.png" alt="Verified Badge"></h1>
   </div>
+
   <p>
-    I am a highly motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology. As a third-year student, I have strong knowledge in software, hardware, network systems, programming in C++, Python, JavaScript, SQL, and practical experience with Microsoft & Google apps. I am skilled in troubleshooting, maintenance, and integrating software and hardware solutions effectively.
+    I am a highly motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology. As a third-year student, I have developed comprehensive skills in software and hardware systems, programming languages including C++, Python, JavaScript, database management including SQL, and expertise in Microsoft Office, Google Workspace, and IDEs for development. I also possess knowledge in troubleshooting, system maintenance, and computer networking, aiming to deliver innovative IT solutions and reliable technical support.
   </p>
-  <div style="margin-top: 2rem;">
+
+  <div style="margin-top:2rem;">
     <a href="#projects" class="btn">View Projects</a>
     <a href="#contact" class="btn">Contact Me</a>
   </div>
+
   <div class="nezuko-container">
     <div id="nezuko-animation"></div>
     <div id="particles-js"></div>
@@ -145,7 +114,7 @@ footer { text-align:center; padding:3rem 1rem; background:#0a0010; color:#a3a3a3
 <section id="about" data-aos="fade-up">
   <h2>About Me</h2>
   <p>
-    I am Robin Ace Tapang, a motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology...
+    I am Robin Ace Tapang, a motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology. I possess strong knowledge in hardware assembly, software development, system troubleshooting, and networking fundamentals. I am proficient in programming languages C++, JavaScript, Python, database management with SQL, Microsoft and Google apps, and various IDEs. I strive to integrate software and hardware solutions efficiently and continuously seek new challenges to enhance my technical expertise.
   </p>
 </section>
 
@@ -155,7 +124,7 @@ footer { text-align:center; padding:3rem 1rem; background:#0a0010; color:#a3a3a3
     <div class="card">HTML, CSS, JavaScript</div>
     <div class="card">C++, Python, SQL</div>
     <div class="card">Hardware & System Troubleshooting</div>
-    <div class="card">Microsoft & Google Workspace</div>
+    <div class="card">Microsoft Office & Google Workspace</div>
     <div class="card">Database Management & Networking</div>
     <div class="card">Front-End Development Fundamentals</div>
   </div>
@@ -164,7 +133,7 @@ footer { text-align:center; padding:3rem 1rem; background:#0a0010; color:#a3a3a3
 <section id="projects" data-aos="fade-up">
   <h2>Projects</h2>
   <div class="grid">
-    <div class="card"><h3>Portfolio Website</h3></div>
+    <div class="card"><h3>Personal Portfolio Website</h3></div>
     <div class="card"><h3>Academic Computer Technology Projects</h3></div>
   </div>
 </section>
@@ -202,51 +171,39 @@ footer { text-align:center; padding:3rem 1rem; background:#0a0010; color:#a3a3a3
 <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 
 <script>
-  AOS.init({ duration: 1200 });
+AOS.init({duration:1200});
 
-  // Seasonal animation randomizer
-  const nameEl = document.querySelector('.name');
-  const seasons = ['summer','winter','autumn'];
-  nameEl.classList.add(seasons[Math.floor(Math.random()*seasons.length)]);
+// Seasonal animation for name
+const nameEl = document.querySelector('.name');
+const seasons = ['summer','winter','autumn'];
+nameEl.classList.add(seasons[Math.floor(Math.random()*seasons.length)]);
 
-  // Verified Blue Badge is now just an img with src and alt
-  // Make sure verified-blue-badge.png exists in the folder
-
-  // Load Nezuko Lottie Animation
-  lottie.loadAnimation({
+// Nezuko animation
+lottie.loadAnimation({
     container: document.getElementById('nezuko-animation'),
     renderer: 'svg',
     loop: true,
     autoplay: true,
-    path: 'nezuko_animation.json' // Replace with your JSON path
-  });
+    path: 'nezuko_animation.json' // Replace with your Nezuko Lottie JSON
+});
 
-  // tsParticles for cinematic powers
-  tsParticles.load("particles-js", {
-    fpsLimit: 60,
-    interactivity: {
-      detectsOn: "canvas",
-      events: { onhover:{enable:true,mode:"repulse"}, onclick:{enable:true,mode:"push"}, resize:true },
-      modes: { repulse:{distance:150,duration:0.6}, push:{quantity:5} }
-    },
-    particles:{
-      number:{value:120},
-      color:{value:["#FF4500","#1E90FF","#00FA9A","#800080","#FFD700"]},
-      shape:{type:"circle"},
-      opacity:{value:0.9,random:true},
-      size:{value:{min:2,max:6},random:true},
-      move:{enable:true,speed:4,direction:"none",random:true,straight:false,out_mode:"out"}
-    }
-  });
+// tsParticles cinematic effects
+tsParticles.load("particles-js",{
+    fpsLimit:60,
+    interactivity:{detectsOn:"canvas",events:{onhover:{enable:true,mode:"repulse"},onclick:{enable:true,mode:"push"},resize:true},
+    modes:{repulse:{distance:150,duration:0.6},push:{quantity:5}}},
+    particles:{number:{value:120},color:{value:["#FF4500","#1E90FF","#00FA9A","#800080","#FFD700"]},
+    shape:{type:"circle"},opacity:{value:0.9,random:true},size:{value:{min:2,max:6},random:true},
+    move:{enable:true,speed:4,direction:"none",random:true,straight:false,out_mode:"out"}}});
 
-  // Motivating Quotes
-  const quotes = [
+// Motivating quotes
+const quotes=[
     "Believe in yourself! / Manalig sa sarili mo! / Kendine inan!",
     "Every step counts. / Bawat hakbang mahalaga. / Her adım önemlidir.",
     "Your potential is limitless. / Walang hanggan ang iyong kakayahan. / Potansiyelin sınırsızdır.",
     "Keep pushing forward! / Patuloy lang sa pag-abante! / İlerlemeye devam et!"
-  ];
-  document.getElementById('quote').innerText = quotes[Math.floor(Math.random()*quotes.length)];
+];
+document.getElementById('quote').innerText = quotes[Math.floor(Math.random()*quotes.length)];
 </script>
 
 </body>
