--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ footer { text-align:center; padding:3rem 1rem; background:#050005; color:#a3a3a3
 <section id="about" data-aos="fade-up">
   <h2>About Me</h2>
   <p>
-    I am Robin Ace Tapang, a dedicated Bachelor of Industrial Technology undergraduate majoring in Computer Technology. I have extensive knowledge in both software and hardware aspects of computing, including programming with C++, Python, and JavaScript, database design and management with SQL, and practical proficiency in Microsoft Office, Google Workspace, and programming IDEs. I am skilled in hardware assembly, system troubleshooting, networking fundamentals, and integration of software and hardware solutions. My goal is to develop innovative IT solutions, optimize system performance, and continuously grow as a tech professional capable of addressing real-world technology challenges.
+    I am Robin Ace Tapang, 22 years old from the Philippines, a dedicated Bachelor of Industrial Technology undergraduate majoring in Computer Technology. I have extensive knowledge in both software and hardware aspects of computing, including programming with C++, Python, and JavaScript, database design and management with SQL, and practical proficiency in Microsoft Office, Google Workspace, and programming IDEs. I am skilled in hardware assembly, system troubleshooting, networking fundamentals, and integration of software and hardware solutions. My goal is to develop innovative IT solutions, optimize system performance, and continuously grow as a tech professional capable of addressing real-world technology challenges.
   </p>
 </section>
 
